# 0rca_dashboard

./: .env  .env.example  .gitignore  DAO.algo.ts  DAO_BACKEND_README.md  DEPLOYMENT.md  MCP_INTEGRATION.md  OAUTH_SETUP.md  README.md  README_DEPLOYMENT_FIX.md  TWITTER_OAUTH_SETUP.md  TWITTER_OAUTH_UPDATED.md  chat-history-schema.sql  dao-schema.sql  email-confirmation-template.html  email-confirmation-template.txt  jest.config.js  mcp-config.json  next.config.js  package-lock.json  package.json  proposal.algo.ts  sample-dao-data.sql  setup-database.md  setup-database.sql  supabase-schema.sql  tailwind.config.ts  test-auth.html  tsconfig.json  updated-delete-user-function.sql
.github/workflows/: deploy.yml
mcp-python/: README.md  pyproject.toml
mcp-python/src/orca_orchestrator_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-python/src/orca_server/: __init__.py  server.py
prisma/: schema.prisma
public/: robots.txt
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/assistant/: page.tsx
src/app/creator/: layout.tsx
src/app/dashboard/: layout.tsx  metadata.ts  page.tsx
src/app/notifications/: layout.tsx  page.tsx
src/app/settings/: layout.tsx  page.tsx
src/app/user/: layout.tsx
src/components/: GuidedTour.tsx  StandaloneAIAssistant.tsx  StandaloneAIAssistant.tsx.bak  dashboard-layout.tsx
src/db/: schema.ts
src/hooks/: use-cached-data.ts
src/lib/: mcp-client.ts  query-client.tsx
src/mcp/: index.ts  tsconfig.json
src/server/: index.ts
src/types/: database.ts
(+41 files in other folders)
